src/snapshots/bminor__parser__test__for_statement-12.snap
---
source: src/parser.rs
expression: "parse_statement(\"for (x = 1;;) {}\")"
---
Ok(
    For {
        initializer: Some(
            Expression {
                expression: Assignment {
                    target: Variable {
                        name: Token {
                            kind: Identifier,
                            lexeme: "x",
                            line: 0,
                        },
                    },
                    value: Literal {
                        value: Token {
                            kind: IntegerLiteral,
                            lexeme: "1",
                            line: 0,
                        },
                        kind: Integer,
                    },
                },
            },
        ),
        condition: None,
        increment: None,
        body: Block {
            statements: [],
        },
    },
)
