src/snapshots/bminor__parser__test__if_statement-4.snap
---
source: src/parser.rs
expression: "parse_statement(\"if (true) return;\")"
---
Ok(
    If {
        condition: Literal {
            value: Token {
                kind: True,
                lexeme: "true",
                line: 0,
            },
            kind: Boolean,
        },
        then: Return {
            value: None,
        },
        otherwise: None,
    },
)
