src/snapshots/bminor__parser__test__if_statement-5.snap
---
source: src/parser.rs
expression: "parse_statement(\"if (true) return 1; else return 0;\")"
---
Ok(
    If {
        condition: Literal {
            value: Token {
                kind: True,
                lexeme: "true",
                line: 0,
            },
            kind: Boolean,
        },
        then: Return {
            value: Some(
                Literal {
                    value: Token {
                        kind: IntegerLiteral,
                        lexeme: "1",
                        line: 0,
                    },
                    kind: Integer,
                },
            ),
        },
        otherwise: Some(
            Return {
                value: Some(
                    Literal {
                        value: Token {
                            kind: IntegerLiteral,
                            lexeme: "0",
                            line: 0,
                        },
                        kind: Integer,
                    },
                ),
            },
        ),
    },
)
