src/snapshots/bminor__parser__test__if_statement-6.snap
---
source: src/parser.rs
expression: "parse_statement(\"if (true) {\n    return 1;\n} else {\n    return 0;\n}\")"
---
Ok(
    If {
        condition: Literal {
            value: Token {
                kind: True,
                lexeme: "true",
                line: 0,
            },
            kind: Boolean,
        },
        then: Block {
            statements: [
                Return {
                    value: Some(
                        Literal {
                            value: Token {
                                kind: IntegerLiteral,
                                lexeme: "1",
                                line: 1,
                            },
                            kind: Integer,
                        },
                    ),
                },
            ],
        },
        otherwise: Some(
            Block {
                statements: [
                    Return {
                        value: Some(
                            Literal {
                                value: Token {
                                    kind: IntegerLiteral,
                                    lexeme: "0",
                                    line: 3,
                                },
                                kind: Integer,
                            },
                        ),
                    },
                ],
            },
        ),
    },
)
