src/snapshots/bminor__parser__test__print_statements-3.snap
---
source: src/parser.rs
expression: "parse_statement(\"print 1, 2 + 2, \\\"string\\\";\")"
---
Ok(
    Print {
        expressions: [
            Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
                kind: Integer,
            },
            Binary {
                left: Literal {
                    value: Token {
                        kind: IntegerLiteral,
                        lexeme: "2",
                        line: 0,
                    },
                    kind: Integer,
                },
                operator: Token {
                    kind: Plus,
                    lexeme: "+",
                    line: 0,
                },
                right: Literal {
                    value: Token {
                        kind: IntegerLiteral,
                        lexeme: "2",
                        line: 0,
                    },
                    kind: Integer,
                },
            },
            Literal {
                value: Token {
                    kind: StringLiteral,
                    lexeme: "\"string\"",
                    line: 0,
                },
                kind: String,
            },
        ],
    },
)
