src/snapshots/bminor__parser__test__return_statements-4.snap
---
source: src/parser.rs
expression: "parse_statement(\"return fn(0);\")"
---
Ok(
    Return {
        value: Some(
            Call {
                name: Token {
                    kind: Identifier,
                    lexeme: "fn",
                    line: 0,
                },
                args: [
                    Literal {
                        value: Token {
                            kind: IntegerLiteral,
                            lexeme: "0",
                            line: 0,
                        },
                        kind: Integer,
                    },
                ],
            },
        ),
    },
)
