src/snapshots/bminor__parser__test__subscript_expression-7.snap
---
source: src/parser.rs
expression: "parse_expression(\"m[\\\"hello\\\"] = \\\"test\\\"\")"
---
Ok(
    Assignment {
        target: Subscript {
            target: Token {
                kind: Identifier,
                lexeme: "m",
                line: 0,
            },
            key: Literal {
                value: Token {
                    kind: StringLiteral,
                    lexeme: "\"hello\"",
                    line: 0,
                },
                kind: String,
            },
        },
        value: Literal {
            value: Token {
                kind: StringLiteral,
                lexeme: "\"test\"",
                line: 0,
            },
            kind: String,
        },
    },
)
